ui/kustomization/svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: angular-ui
  name: angular-ui
  namespace: devops-internship
spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
  selector:
    name: angular-ui
