ui/kustomization/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-ui
  namespace: devops-internship
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /frontend-ui
        pathType: Prefix
        backend:
          service:
            name: angular-ui
            port:
              number: 80
